# userdocs

./: .gitignore  .mtn-ignore  Abstraction_Layer_Interface_Proposal.odt  Makefile.am  Makefile.in  MonotoneSetup.txt  TODO.txt  chemesis-3-extension.txt  cns14-tutorial-outline.txt  config.status  configure  configure.ac  dir.txt  experiment-protocols.txt  heccer.odp  minutes-2010-11-18.txt  minutes-2011-01-08.txt  minutes-2011-01-21.txt  minutes-2011-03-25.txt  minutes-2012-02-28-cns.tex  minutes-2012-07-30.txt  minutes-2012-08-01.txt  minutes-2012-08-09.txt  minutes-2012-08-13.txt  minutes-2012-08-17.txt  minutes-2012-08-27.txt  minutes-2012-11-16.txt  minutes-20120626.txt  minutes-20120718.txt  minutes-2013-01-14.txt  minutes-2014-02-16.txt  minutes-2014-04-09.txt  nnmds.txt  project-todo.txt  purkinje-slide-hugo.ppt  purkinje-slide.ppt  release-expand.config  test-script.ndf  tests.config  tutorial-cns2014.txt  (+4 more)
2010-job-posting/: 2010-job-posting.rst  descriptor.yml
2023-05-18-cbi-multiscale/: 2023-06-10-cbi-multiscale.tex  2023-06-17-cbi-multiscale.tex  2023-06-18-cbi-multiscale.tex  2023-06-24-cbi-multiscale.tex  2023-07-02-JMN.cls  2023-07-02-cornelis-coop-msns-3.tex  2023-07-02-overleaf-help-support.txt  2023-07-07-cornelis-coop-msns-4.tex  2023-07-08-cornelis-coop-msns-4.tex  2023-07-16-cbi-multiscale.tex  2023-07-16-g3-refs-adc.bib  2023-07-21-multiscale-1.tex  2023-07-22-cbi-multiscale.tex  2023-07-23-cbi-multiscale-1.tex  2023-07-29-cbi-multiscale.tex  2023-07-30-cbi-multiscale.spl  2023-07-30-cbi-multiscale.tex  2023-08-06-cbi-multiscale.tex  2023-08-08-cbi-multiscale.tex  2023-08-10-cbi-multiscale.tex  2023-08-13-cbi-multiscale.tex  2023-09-01-cbi-multiscale.tex  2023-09-17-jcns-cbi-emulation-neuroscience.tex  2023-09-23-jcns-cbi-emulation-neuroscience.tex  2023-09-24-jcns-cbi-emulation-neuroscience.tex  2023-09-30-jcns-cbi-emulation-neuroscience.tex  2023-10-01-jcns-cbi-emulation-neuroscience.tex  2023-10-06-jcns-cbi-emulation-neuroscience.tex  2023-10-08-jcns-cbi-emulation-neuroscience.tex  2023-10-18-jcns-cbi-emulation-neuroscience.tex  2023-10-22-jcns-cbi-emulation-neuroscience.tex  2023-10-31-jcns-cbi-emulation-neuroscience.tex  2023-11-11-jcns-cbi-emulation-neuroscience.tex  2023-11-19-jcns-cbi-emulation-neuroscience.tex  CIN-549321.v1-Review-Report.txt  cbi-multiscale-test.tex  cbi-multiscale.tex  cover.tex  logbook.txt  results.tex  (+1 more)
CNS07/: descriptor.yml
CNS08/: descriptor.yml
CNS09/: CNS09pdf  descriptor.yml
CNS2010-rtxi/: CNS2010-abstract.rtf  cns10-abstract-rtxi.rtf  descriptor.yml
NIH-PAR-09-218/: NIH-PAR-09-218-publication-1.doc  NIH-PAR-09-218-publication-2.doc  NIH-PAR-09-218-publication-3.doc  NIH-PAR-09-218-publication-4.doc  descriptor.yml
NewDocument/: NewDocument.tex  descriptor.yml
README/: README.tex  descriptor.yml
autogen/: autogen.tex  descriptor.yml
background-material/: background-material.tex  descriptor.yml
backup-repository/: backup-repository.tex  descriptor.yml
backward-compatibility/: backward-compatibility.tex  descriptor.yml
bog-ch2/: descriptor.yml
bog-ch3/: NewDocument.tex  descriptor.yml
bog-ch4/: descriptor.yml
bog-ch5/: descriptor.yml
bog-ch6/: descriptor.yml
book-of-genesis/: book-of-genesis.tex  descriptor.yml
build-debian/: build-debian.tex  descriptor.yml
cable-theory/: G3-Digression-CableTheory-V1.tex  descriptor.yml
cable-theory-digression/: cable-theory-digression.tex  descriptor.yml
cbi-architecture/: cbi-architecture-changes.tex  cbi-architecture-review.rtf  cbi-architecture.rtf  cbi-architecture.tex  cover.txt  descriptor.yml  plos.patch  production.txt  review.txt  reviewer.txt
cbi-architecture-s1/: cbi-architecture-s1.tex  descriptor.yml
cbi-architecture-s2/: cbi-architecture-s2.tex  descriptor.yml
cbi-architecture-s3/: cbi-architecture-s3.dvi  cbi-architecture-s3.tex  descriptor.yml
cbi-architecture-s4/: cbi-architecture-s4.tex  descriptor.yml
cbi-g3/: cbi-g3.tex  descriptor.yml
cbi-multiscale/: cbi-multiscale.rtf  cbi-multiscale.tex  cbi-multiscale.txt  cover.txt  descriptor.yml
cbi-scripting/: PLoS1-Python-response-to-reviewers.odt  PLoS1-Python-response-to-reviewers.rtf  abstract.txt  all.bib  cbi-python.tex  cbi-python.tex.old  cbi-python.tex.old2  cbi-python.tex.old3  cbi-python.tex.old4  cbi-python.tex.old5  cbi-python.tex.old6  cbi-scripting-changes.tex  cbi-scripting.doc  cbi-scripting.rtf  cbi-scripting.tex  cover.txt  descriptor.yml  plos-cbi-python.tex  plos.patch  production.txt  pythonbchap.tex  review.txt  submission.txt
chapter-compartments/: chapter-compartments.tex  descriptor.yml
chemesis-3-log/: chemesis-3-log.tex  descriptor.yml
chemesis-3-questions/: chemesis-3-questions.tex  descriptor.yml
chemesis-log/: chemesis-log.tex  descriptor.yml
cns/: cns.tex  descriptor.yml
cns-todo/: cns-todo.tex  descriptor.yml
cns07/: descriptor.yml
cns07-abstract/: descriptor.yml
cns07-poster/: descriptor.yml
cns08/: descriptor.yml
cns08a-abstract/: descriptor.yml
cns08a-poster/: descriptor.yml
cns08b-abstract/: descriptor.yml
cns08b-poster/: descriptor.yml
cns09/: descriptor.yml
cns09-abstract/: descriptor.yml
cns09-poster/: descriptor.yml
cns10-cbi-utsa-uthscsa-abstract/: descriptor.yml
cns10-g3-rtxi-poster/: descriptor.yml
cns10-pc-information-transfer-abstract/: descriptor.yml
cns10-pc-information-transfer-poster/: descriptor.yml
cns10-publication-abstract/: descriptor.yml
cns10-publication-poster/: descriptor.yml
cns10-rtxi-abstract/: descriptor.yml
cns10-tms-poster/: descriptor.yml
cns10-workshop/: cns10-workshop.tex  descriptor.yml  outline.tex
cns10-workshop-outline/: cns10-workshop-outlineoutline.tex  descriptor.yml
cns10b-abstract/: cns10-abstract-publication.rtf  descriptor.yml
cns10c-abstract/: cns10-abstract-publication.rtf  cns10-abstract-tms.rtf  descriptor.yml
cns11-poster/: descriptor.yml
cns11-poster-2/: descriptor.yml
cns11-workshop/: cns11-workshop.tex  descriptor.yml
cns11a-abstract/: cns11a-abstract.doc  descriptor.yml  (+2 more)
perl/: Makefile.am
perl/GENESIS3/: Documentation.pm
(+911 files in other folders)
