##
## userdocs: the genesis 3 documentation system.
##

##############################################################################
##'
##' userdocs
##'
##' Copyright (C) 2009-2010 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

perldir = $(prefix)/glue/swig/perl

nobase_dist_perl_DATA = @PERL_MODULES@

perldatadir = $(prefix)/neurospaces/userdocs

nobase_dist_perldata_DATA = @PERL_DATA@

